2007-02-12 Tim
 PATCH: [ 1658347 ] Add note about PSDK paths and VC into dev-readme
  Developers: readme-developers.html

2006-12-04 Kimmo
 Update SVN URLs
  Developers: readme-Subversion.html

2006-11-09 Tim
 PATCH: [ 1593009 ] Updated Organisation.txt
  Developers: Organisation.txt
 BUG: [ 1593013 ] Two "InnoSetup" readme's in DevDocs
  Developers deleted files: readme-developers-InnoSetup.html

2006-11-08 Tim
 Remove outdated "Docs\Developers\WinMerge files*"
  Developers deleted files: WinMerge files.pdf, WinMerge files.ppt
  Developers deleted directory: WinMerge files (Web format)

2006-11-07 Kimmo
 Add building instructions for PCRE
  Developers: readme-developers.html

2006-11-05 Kimmo
 Update building instructions for expat and scew (a lot simpler now)
  Developers: readme-developers.html

2006-11-03 Tim
 PATCH: [ 1589578 ] Add <h4> style to readme-developers.html
  Developers: readme-developers.html

2006-11-02 Kimmo
 Update installer doc for expat dlls
  Developers: readme-InnoSetup.html

2006-11-01 Kimmo
 Update building instructions after expat and scew addition
  Developers: readme-developers.html

2006-09-25 Kimmo
 Add info about different PSDK versions and components needed
  Developers: readme-developers.html

2006-09-24 Kimmo
 Add 2.6 branch URL
  Developers: readme-Subversion.html
 Clarify tagging releases to Subversion repository (no tagging for experimentals)
  Developers: readme-developers.html

2006-09-19 Kimmo
 Add ShellExtensionX64.dll to installer doc
  Developers: readme-InnoSetup.html
 Update Doxygen config file for new ArchiveSupport folder, also create docs in subfolder
  Developers: doxygen.cfg

2006-09-16 Kimmo
 PATCH: [ 1559614 ] Readme: building 64-bit shellextension
  Developers: readme-developers.html

2006-09-11 Kimmo
 PATCH: [ 1555893 ] Update readme-developers.html
  Developers: readme-developers.html

2006-09-10 Kimmo
 PATCH: [ 1555237 ] Update installer doc after switch to SVN