@@ -6,10 +6,25 @@
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <style type="text/css">
   <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
     h3 {
       padding: 2px;
       border-left: 4px solid #FFCC00;
       border-bottom: 1px solid #FFCC00;
+    }
+    pre {
+      margin-left: 25px;
+      margin-right: 25px;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border: 1px solid black;
     }
   -->
   </style>
