@@ -6,10 +6,23 @@
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <style type="text/css">
   <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
     h3 {
       padding: 2px;
       border-left: 4px solid #FFCC00;
       border-bottom: 1px solid #FFCC00;
+    }
+    h4 {
+      padding: 2px;
+      border-left: 8px solid #FF9933;
+      border-bottom: 1px solid #FF9933;
     }
   -->
   </style>
@@ -52,7 +65,7 @@ http://svn.sourceforge.net/viewvc/winmerge/</a>.
 <h3>Subversion documentation</h3>
 <p><a href="http://svnbook.red-bean.com/">The Subversion Book</a> is the definite guide to Subversion.
 Please try to find some time to look at it. There are also many Subversion and SVN resources available
-in the net. Just listing couple of them here:
+in the net. Just listing couple of them here:</p>
 <ul>
   <li>
     <a href="http://http://en.wikipedia.org/wiki/Subversion_(software)/">Wikipedia article</a> about
@@ -64,8 +77,6 @@ in the net. Just listing couple of them here:
   </li>
 </ul>
 
-</p>
-
 <h3>Repository URLs</h3>
 <p>WinMerge Subversion repository URL is:<br>
 <code>https://winmerge.svn.sourceforge.net/svnroot/winmerge</code>
@@ -76,13 +87,12 @@ in the net. Just listing couple of them here:
 </p>
 <p>Branches are in separate folder:<br>
 <code>https://winmerge.svn.sourceforge.net/svnroot/winmerge/branches</code><br>
-Current branches are:
+Current branches are:</p>
 <ul>
   <li>2.6 release branch<br>
   <code>https://winmerge.svn.sourceforge.net/svnroot/winmerge/branches/R2_6</code></li>
 </ul>
-Old branches (2.0 - 2.4 releases) are in CVS repository.
-</p>
+<p>Old branches (2.0 - 2.4 releases) are in CVS repository.</p>
 
 <h3>Quick intro to using TortoiseSVN</h3>
 <h4>Checkout</h4>
